--- a/package.json
+++ b/package.json
@@ -16,39 +16,39 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
-    "@apollo/client": "^3.3.21",
-    "@iconify/react": "^3.1.3",
-    "@next/eslint-plugin-next": "11.1.3-canary.7",
-    "bootstrap": "^5.0.2",
-    "classnames": "^2.3.1",
-    "graphql": "^15.5.1",
+    "@apollo/client": "^3.11.4",
+    "@iconify/react": "^5.0.2",
+    "@next/eslint-plugin-next": "14.2.5",
+    "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
+    "graphql": "^16.9.0",
     "headroom.js": "^0.12.0",
-    "moment": "^2.29.1",
-    "next": "^13.2.1",
-    "nouislider": "^15.2.0",
-    "react": "^18.2.0",
-    "react-datetime": "^3.0.4",
-    "react-dom": "^18.2.0",
+    "moment": "^2.30.1",
+    "next": "^14.2.5",
+    "nouislider": "^15.8.1",
+    "react": "^18.3.1",
+    "react-datetime": "^3.2.0",
+    "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-easy-emoji": "^1.8.1",
-    "react-headroom": "^3.1.1",
-    "react-lottie": "^1.2.3",
+    "react-headroom": "^3.2.1",
+    "react-lottie": "^1.2.4",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-typist": "^2.0.5",
-    "reactstrap": "^8.9.0",
-    "sharp": "^0.31.3"
+    "reactstrap": "^9.2.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.20.0",
-    "@types/headroom.js": "^0.12.2",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
-    "@types/react-lottie": "^1.2.6",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "eslint-config-prettier": "^8.6.0",
-    "prettier": "2.8.4",
-    "typescript": "^4.9.5"
+    "@types/babel__core": "^7.20.5",
+    "@types/headroom.js": "^0.12.4",
+    "@types/node": "^22.2.0",
+    "@types/react": "^18.3.3",
+    "@types/react-lottie": "^1.2.10",
+    "eslint": "9.9.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.5.4"
   }
 }
